--- a/pkg/docker/index.html
+++ b/pkg/docker/index.html
@@ -182,9 +182,7 @@
     </ol>
     <div class="panel-default panel">
       <div class="panel-heading col-sm-12">
-        Container:
-        <span id="container-details-names"></span>
-        <div class="pull-right" style="height:25px">
+        <div class="pull-right">
           <button class="btn btn-default" id="container-details-start">Start</button>
           <button class="btn btn-default" id="container-details-stop">Stop</button>
           <button class="btn btn-default" id="container-details-restart">Restart</button>
@@ -195,6 +193,8 @@
           </button>
           <div class="spinner" style="display: none;"></div>
         </div>
+        Container:
+        <span id="container-details-names"></span>
       </div>
       <div class="panel-body">
         <table class="cockpit-info-table col-sm-5">
@@ -273,12 +273,12 @@
     </ol>
     <div class="panel-default panel">
       <div class="panel-heading col-sm-12">
-        Image: <span id="image-details-tags"></span>
-        <div class="pull-right" style="height:25px" id="image-details-buttons">
+        <div class="pull-right" id="image-details-buttons">
           <button class="btn btn-default" id="image-details-run">Run</button>
           <button class="btn btn-danger" id="image-details-delete">Delete</button>
           <div class="spinner" style="display: none;"></div>
         </div>
+        Image: <span id="image-details-tags"></span>
       </div>
       <div class="panel-body">
         <table class="cockpit-info-table">
